--- a/assets/sass/pages/_list.scss
+++ b/assets/sass/pages/_list.scss
@@ -3,8 +3,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 1rem;
-    margin-bottom: 1.5rem;
+    margin: 1.25rem 0;
     font-family: $title-font;
 
     &--title {
